[gd_scene load_steps=6 format=3 uid="uid://xsvmyhmey26i"]

[ext_resource type="Script" uid="uid://dm0sj4i8i3eyt" path="res://game/2-prep-station/2_prep.gd" id="1_i0f2h"]
[ext_resource type="Texture2D" uid="uid://s7vgr2eq1gmb" path="res://assets/prep/prep.png" id="2_im0yf"]
[ext_resource type="PackedScene" uid="uid://t40csg6kr65m" path="res://assets/prep/filling/filling_ingredient.tscn" id="3_24ehp"]
[ext_resource type="PackedScene" uid="uid://cfdab5rtdwbfn" path="res://assets/prep/dumpling_skin.tscn" id="4_i0f2h"]
[ext_resource type="Texture2D" uid="uid://cek8kwcvtnmma" path="res://assets/prep/singledumpling.png" id="5_0gb0w"]

[node name="PrepStation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i0f2h")

[node name="PrepStation" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(960, 540)
texture = ExtResource("2_im0yf")

[node name="finishDumpling" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 1145.0
offset_top = 854.0
offset_right = 1314.0
offset_bottom = 935.0
text = "Submit"

[node name="FinishedDumplingImage" type="Sprite2D" parent="."]
visible = false
position = Vector2(948, 724)
texture = ExtResource("5_0gb0w")

[node name="Ingredients" type="Node2D" parent="."]

[node name="DumplingSkin" parent="Ingredients" instance=ExtResource("4_i0f2h")]
position = Vector2(238, 617)

[node name="FillingIngredient" parent="Ingredients" instance=ExtResource("3_24ehp")]
position = Vector2(316, 297)

[connection signal="pressed" from="finishDumpling" to="." method="_on_finish_dumpling_pressed"]
